2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Add special.tamura group.
	(shimbun-clear-contents): Merge the :before method into the :around
	method (luna-define-method doesn't allow two or more methods for the
	identical parent function); remove adv for news.sports group; improve
	the cleaner for special.kiko group.

	* shimbun.el (shimbun-japanese-hankaku-region): Convert urls first;
	improve the way not to break paragraph start.

2007-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-header-regexp-default): Update.
	(shimbun-mainichi-group-table): Add shakai.edu.campal and sports.column
	groups; move seiji.*, shakai.* and sports.* groups to
	shimbun-mainichi-subgroups-alist; update regexp for eye.shasetsu group.
	(shimbun-mainichi-subgroups-alist): Update eye.shasetsu entry; add many
	subgroups.
	(shimbun-mainichi-get-headers): Improve duplication check; remove
	special treatment for eye.shasetsu group.

	* shimbun.el (shimbun-retrieve-url): Keep buffer's multibyteness even
	if retrieving failed.
	(shimbun-japanese-hankaku-region): Don't break paragraph start.

2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ChangeLog: New file.

2007-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-group-table): Add eye and kansai
	groups; move eye.* except eye.shasetsu, kansai.sanshi, keizai.*,
	kokusai.*, kurashi.* and science.* groups to
	shimbun-mainichi-subgroups-alist.
	(shimbun-mainichi-subgroups-alist): Add some subgroups; use
	shimbun-mainichi-header-regexp-default for the default.
	(shimbun-mainichi-content-start): Update.
	(shimbun-mainichi-get-headers): Follow group-table change.
	(shimbun-mainichi-prepare-article): Ditto.

2007-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-group-table): Move entertainment.*
	groups to himbun-mainichi-subgroups-alist.
	(shimbun-mainichi-subgroups-alist): New variable.